rust/src/openvasd/api_tests/snapshots/notus_compose POST __notus__debian_10.snap
---
source: src/openvasd/api_tests/test_builder.rs
expression: inner
---
{
  "status_code": 200,
  "headers": {
    "api-version": "1",
    "authentication": "mTLS",
    "content-length": "329",
    "content-type": "application/json",
    "date": "[redacted]",
    "feed-version": "[redacted]",
  },
  "body": "{\"1.3.6.1.4.1.25623.1.1.1.1.2019.4477\":[{\"name\":\"libzmq3-dev\",\"installed_version\":\"4.3.0-4+deb10u1\",\"fixed_version\":{\"version\":\"4.3.1-4+deb10u1\",\"specifier\":\">=\"}}],\"1.3.6.1.4.1.25623.1.1.1.1.2020.4761\":[{\"name\":\"libzmq3-dev\",\"installed_version\":\"4.3.0-4+deb10u1\",\"fixed_version\":{\"version\":\"4.3.1-4+deb10u2\",\"specifier\":\">=\"}}]}",
}
