rust/src/openvasd/api_tests/snapshots/notus_compose POST __notus__not_a_system.snap
---
source: src/openvasd/api_tests/test_builder.rs
expression: inner
---
{
  "status_code": 404,
  "headers": {
    "api-version": "1",
    "authentication": "mTLS",
    "content-length": "73",
    "content-type": "application/json",
    "date": "[redacted]",
    "feed-version": "[redacted]",
  },
  "body": "{\"status\":404,\"message\":\"Unknown notus product\",\"details\":\"not_a_system\"}",
}
